[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "data_platform"
version = "0.0.1"
dependencies = [
    "dagster==1.7.*",
    "dagster-postgres",
    "dagster_docker",
    "dagster-slack",
    "dagster-pandas",
    "dagster-dbt",
    "dagster-datahub",
    "dagster-embedded-elt",
    "dbt-core==1.7.14",
    "dbt-clickhouse",
    "clickhouse-driver",
    "dlt[clickhouse]>=0.4.11"
]

[project.optional-dependencies]
dev = [
    "click",
    "dagster-webserver",
    "pytest",
    "sqlfluff>=3",
    "sqlfluff-templater-dbt",
    "sprocketship",
    "streamlit"
]

tests = [
    "pytest",
    "responses"
]

[tool.setuptools.packages.find]
exclude = ["data_platform_tests"]

# ########################
# ##### DAGSTER
# ########################

[tool.dagster]
module_name = "data_platform"

# ########################
# ##### SQLFLUFF
# ########################

[tool.sqlfluff.core]
templater = "dbt"
dialect = "clickhouse"
exclude_rules = [
    "aliasing.unique.column",
    "ambiguous.column_count",
    "structure.column_order",
    "structure.using",
    "references.consistent",
    "references.qualification",
]
max_line_length = 100
nocolor = true
# Warn on the use of keywords as identifiers
warnings = "RF04"

[tool.sqlfluff.templater.dbt]
project_dir = "./data_platform_dbt"
profiles_dir = "./data_platform_dbt"

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true
load_macros_from_path = "./data_platform_dbt/macros"

[tool.sqlfluff.indentation]
tab_space_size = 4

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.identifiers]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.functions]
extended_capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.types]
extended_capitalisation_policy = "lower"
